--- a/mobile-app-development.html
+++ b/mobile-app-development.html
@@ -530,29 +530,29 @@
 			<div class="row">
                 <div class="col-lg-12 p-0">
                     <div class="portfolio-filter mobile-app-service wow fadeInLeft">
-                        <div class="pf-item set-bg fashion large-height" data-setbg="images/portfolio/pf-4.jpg" style="background-image: url(&quot;images/portfolio/pf-4.jpg&quot;); position: absolute; left: 0%; top: 0px;">
-                            <a href="images/portfolio/pf-4.jpg" class="pf-icon image-popup"><span class="icon_plus"></span></a>
+                        <div class="pf-item set-bg fashion large-height" data-setbg="images/services/mobile-app-development/android-app-development.webp" style="background-image: url(&quot;images/services/mobile-app-development/android-app-development.webp&quot;); position: absolute; left: 0%; top: 0px;">
+                            <a href="images/services/mobile-app-development/android-app-development.webp" class="pf-icon image-popup"><span class="icon_plus"></span></a>
                             <div class="pf-text">
                                 <h4>Android App Development</h4>
                                 <span>Make the most out of the open-source free mobile operating system – Android. Get yourself a highly scalable android app that works across different platforms such as tablets, windows, TVs, etc. with our solid android app solutions.</span>
                             </div>
                         </div>
-                        <div class="pf-item large-width large-height set-bg lifestyle" data-setbg="images/portfolio/pf-2.jpg" style="background-image: url(&quot;images/portfolio/pf-2.jpg&quot;); position: absolute; left: 19.9398%; top: 0px;">
-                            <a href="images/portfolio/pf-2.jpg" class="pf-icon image-popup"><span class="icon_plus"></span></a>
+                        <div class="pf-item large-width large-height set-bg lifestyle" data-setbg="images/services/mobile-app-development/ios-app-development.webp" style="background-image: url(&quot;images/services/mobile-app-development/ios-app-development.webp&quot;); position: absolute; left: 19.9398%; top: 0px;">
+                            <a href="images/services/mobile-app-development/ios-app-development.webp" class="pf-icon image-popup"><span class="icon_plus"></span></a>
                             <div class="pf-text">
                                 <h4>iOS App Development</h4>
                                 <span>With a prodigious experience playing around with Apple and its operating system – iOS – we have mastered the state-of-artwork of iOS app development to create functional, feature-rich, consumer-centric, and user-friendly iOS apps.</span>
                             </div>
                         </div>
-                        <div class="pf-item large-width set-bg natural" data-setbg="images/portfolio/pf-3.jpg" style="background-image: url(&quot;images/portfolio/pf-3.jpg&quot;); position: absolute; left: 59.9699%; top: 0px;">
-                            <a href="images/portfolio/pf-3.jpg" class="pf-icon image-popup"><span class="icon_plus"></span></a>
+                        <div class="pf-item large-width set-bg natural" data-setbg="images/services/mobile-app-development/web-app-development.webp" style="background-image: url(&quot;images/services/mobile-app-development/web-app-development.webp&quot;); position: absolute; left: 59.9699%; top: 0px;">
+                            <a href="images/services/mobile-app-development/web-app-development.webp" class="pf-icon image-popup"><span class="icon_plus"></span></a>
                             <div class="pf-text">
                                 <h4>Web App Development</h4>
                                 <span>Online presence is indispensable for a business to thrive in this digital age of the world. Future Reality helps you with web app development to create a prominent web presence for greater traffic, leads, and sales.</span>
                             </div>
                         </div>
-						<div class="pf-item large-width set-bg natural mobile-service-img-4" data-setbg="images/portfolio/pf-3.jpg" style="background-image: url(&quot;images/portfolio/pf-3.jpg&quot;); position: absolute; left: 59.9699%; top: 0px !important;">
-                            <a href="images/portfolio/pf-3.jpg" class="pf-icon image-popup"><span class="icon_plus"></span></a>
+						<div class="pf-item large-width set-bg natural mobile-service-img-4" data-setbg="images/services/mobile-app-development/cross-platform-mobile-app-development.webp" style="background-image: url(&quot;images/services/mobile-app-development/cross-platform-mobile-app-development.webp&quot;); position: absolute; left: 59.9699%; top: 0px !important;">
+                            <a href="images/services/mobile-app-development/cross-platform-mobile-app-development.webp" class="pf-icon image-popup"><span class="icon_plus"></span></a>
                             <div class="pf-text">
                                 <h4>Cross-Platform Mobile App Development</h4>
                                 <span>A native mobile app solely for a single platform is more costly than an app coded to operate relentlessly on all the platforms. Cross-platform app development helps you reach consumers on all platforms – operating system was never a problem.</span>
@@ -599,11 +599,11 @@
 			<div class="row">
 				<div class="col-sm-12 col-md-12 col-lg-5 wow fadeInLeft">
 					<div class="tab-content" id="imagetab">
-						<div class="tab-pane fade show active" id="panel_a_first" role="tabpanel" aria-labelledby="first-tab"><img src="images/services/food.png" alt="img" class="img-fluid"> </div>
-						<div class="tab-pane fade" id="panel_a_second" role="tabpanel" aria-labelledby="second-tab"><img src="images/services/ecommerce.png" alt="img" class="img-fluid"></div>
-						<div class="tab-pane fade" id="panel_a_third" role="tabpanel" aria-labelledby="third-tab"><img src="images/services/marketplace.png" alt="img" class="img-fluid"> </div>
-						<div class="tab-pane fade" id="panel_a_fourth" role="tabpanel" aria-labelledby="fourth-tab"><img src="images/services/social.png" alt="img" class="img-fluid"></div>
-						<div class="tab-pane fade" id="panel_a_fifth" role="tabpanel" aria-labelledby="fifth-tab"> <img src="images/services/education.png" alt="img" class="img-fluid"> </div>
+						<div class="tab-pane fade show active" id="panel_a_first" role="tabpanel" aria-labelledby="first-tab"><img src="images/services/mobile-app-development/food-app-development.webp" alt="img" class="img-fluid"> </div>
+						<div class="tab-pane fade" id="panel_a_second" role="tabpanel" aria-labelledby="second-tab"><img src="images/services/mobile-app-development/ecommerce-app-development.webp" alt="img" class="img-fluid"></div>
+						<div class="tab-pane fade" id="panel_a_third" role="tabpanel" aria-labelledby="third-tab"><img src="images/services/mobile-app-development/marketplace-app-development.webp" alt="img" class="img-fluid"> </div>
+						<div class="tab-pane fade" id="panel_a_fourth" role="tabpanel" aria-labelledby="fourth-tab"><img src="images/services/mobile-app-development/social-app-development.webp" alt="img" class="img-fluid"></div>
+						<div class="tab-pane fade" id="panel_a_fifth" role="tabpanel" aria-labelledby="fifth-tab"> <img src="images/services/mobile-app-development/education-app-development.webp" alt="img" class="img-fluid"> </div>
 					</div>
 				</div>
 				<div class="col-sm-12 col-md-12 col-lg-7 my-auto pl-sm-0 pl-md-4 wow fadeInRight">
@@ -726,7 +726,7 @@
 	</section>
 	<!--End Case Studies-->
 
-    <!--Start About -->
+    <!--Start Custom App -->
     <div class="custom-app py-3 py-md-3 py-lg-5" id="company">
         <div class="container">
             <div class="row">
@@ -735,12 +735,12 @@
                     <p>Dive into the future with Futurealiti – A custom mobile app development company with unmatched development services and technologies. Unlike conventional mobile applications developers around the globe, we have set ourselves apart with technology beyond imagination. We develop traditional mobile apps for startups and SMBs. For major enterprises, we have incredible technologies such as; Augmented Reality (AR), Virtual Reality (VR), and Mixed Reality (MR) to empower them. Futurealiti is on the mission to evolve businesses and organizations, enabling them to streamline their operations and automate workflows. With alluring designs and impeccable coding, we help brands to push the limit and thrive among the best in the world. Leverage our mobile app development services to ignite your overall digital traction and connect with your target audience efficiently.</p>
                 </div>
                 <div class="col-md-6 my-auto wow fadeInRight">
-                    <img src="images/services/DTC-4 1.png" alt="" class="img-fluid">
+                    <img src="images/services/mobile-app-development/custom-mobile-app.webp" alt="Custom Mobile App" class="img-fluid">
                 </div>
             </div>
         </div>
     </div>
-    <!--End About-->
+    <!--End Custom App-->
 
     <!-- Start Our Process -->
     <section class="process py-3 py-md-3 py-lg-5" id="process">
@@ -843,7 +843,7 @@
                     <p class="pt-2"><a href="#"><u>Read the case study</u></a></p>
                 </div>
                 <div class="col-md-6 my-auto wow fadeInRight">
-                    <img src="images/services/DTC-4 1.png" alt="" class="img-fluid">
+                    <img src="images/services/mobile-app-development/ideal-mobile-app.webp" alt="Ideal Mobile App" class="img-fluid">
                 </div>
             </div>
 			<div class="-cta-btn mt70">
