--- a/website-development.html
+++ b/website-development.html
@@ -500,29 +500,29 @@
 			<div class="row">
                 <div class="col-lg-12 p-0 wow fadeInUp">
                     <div class="portfolio-filter web-service">
-                        <div class="pf-item set-bg fashion large-height" data-setbg="images/portfolio/pf-4.jpg" style="background-image: url(&quot;images/portfolio/pf-4.jpg&quot;); position: absolute; left: 0%; top: 0px;">
-                            <a href="images/portfolio/pf-4.jpg" class="pf-icon image-popup"><span class="icon_plus"></span></a>
+                        <div class="pf-item set-bg fashion large-height" data-setbg="images/services/website-development/ecommerce-web-development.webp" style="background-image: url(&quot;images/services/website-development/ecommerce-web-development.webp&quot;); position: absolute; left: 0%; top: 0px;">
+                            <a href="images/services/website-development/ecommerce-web-development.webp" class="pf-icon image-popup"><span class="icon_plus"></span></a>
                             <div class="pf-text">
                                 <h4>E-Commerce</h4>
                                 <span>Ecommerce website design and development services aid in the creation of a quality e-commerce experience that appeals to today's demanding customers. When you work with e-commerce website development, you'll be collaborating with e-commerce developers who understand high-performance e-commerce architectures and conversion-driven user interfaces.</span>
                             </div>
                         </div>
-                        <div class="pf-item large-width large-height set-bg lifestyle" data-setbg="images/portfolio/pf-2.jpg" style="background-image: url(&quot;images/portfolio/pf-2.jpg&quot;); position: absolute; left: 19.9398%; top: 0px;">
-                            <a href="images/portfolio/pf-2.jpg" class="pf-icon image-popup"><span class="icon_plus"></span></a>
+                        <div class="pf-item large-width large-height set-bg lifestyle" data-setbg="images/services/website-development/enterprise-web-development.webp" style="background-image: url(&quot;images/services/website-development/enterprise-web-development.webp&quot;); position: absolute; left: 19.9398%; top: 0px;">
+                            <a href="images/services/website-development/enterprise-web-development.webp" class="pf-icon image-popup"><span class="icon_plus"></span></a>
                             <div class="pf-text">
                                 <h4>Enterprise Web Development Services</h4>
                                 <span>With a focus on creative, professional web design, we work closely with enterprise-level customers to produce excellent, high-performing, and secure custom websites. Our company provides the resources and knowledge to ensure that your project's objectives are not just fulfilled, but the final product creates the optimum satisfaction level.</span>
                             </div>
                         </div>
-                        <div class="pf-item large-width set-bg natural" data-setbg="images/portfolio/pf-3.jpg" style="background-image: url(&quot;images/portfolio/pf-3.jpg&quot;); position: absolute; left: 59.9699%; top: 0px;">
-                            <a href="images/portfolio/pf-3.jpg" class="pf-icon image-popup"><span class="icon_plus"></span></a>
+                        <div class="pf-item large-width set-bg natural" data-setbg="images/services/website-development/wordpress-web-development.webp" style="background-image: url(&quot;images/services/website-development/wordpress-web-development.webp&quot;); position: absolute; left: 59.9699%; top: 0px;">
+                            <a href="images/services/website-development/wordpress-web-development.webp" class="pf-icon image-popup"><span class="icon_plus"></span></a>
                             <div class="pf-text">
                                 <h4>WordPress Web Development</h4>
                                 <span>Over 40% of all websites now use the simple-to-use, search engine-friendly, and adaptable building platform. WordPress website development services come with a user-friendly content management system (CMS) that lets you make changes on the fly.</span>
                             </div>
                         </div>
-                        <div class="pf-item set-bg large-width wedding" data-setbg="images/portfolio/pf-4.jpg" style="background-image: url(&quot;images/portfolio/pf-4.jpg&quot;); position: absolute; left: 0%; top: 380px;">
-                            <a href="images/portfolio/pf-4.jpg" class="pf-icon image-popup"><span class="icon_plus"></span></a>
+                        <div class="pf-item set-bg large-width wedding" data-setbg="images/services/website-development/php-web-development.webp" style="background-image: url(&quot;images/services/website-development/php-web-development.webp&quot;); position: absolute; left: 0%; top: 380px;">
+                            <a href="images/services/website-development/php-web-development.webp" class="pf-icon image-popup"><span class="icon_plus"></span></a>
                             <div class="pf-text">
                                 <h4>PHP Web Development</h4>
                                 <span>PHP development services are focused on making all forms of web applications' server-sides more safe and powerful. PHP development company effectively tames PHP to provide powerful online portals, B2C & B2B web apps, CMSs, and other web-based solutions, drawing on our PHP programming experience.</span>
@@ -535,8 +535,8 @@
                                 <span>Web application development solutions that tackle business difficulties in healthcare, finance, retail, and manufacturing are developed by us, a top web app development company. We make certain that the web solution meets your company's needs. Your business operations will be streamlined using custom web websites and apps.</span>
                             </div>
                         </div>
-						<div class="pf-item set-bg large-width wedding" data-setbg="images/portfolio/pf-4.jpg" style="background-image: url(&quot;images/portfolio/pf-4.jpg&quot;); position: absolute; left: 0%; top: 380px;">
-                            <a href="images/portfolio/pf-4.jpg" class="pf-icon image-popup"><span class="icon_plus"></span></a>
+						<div class="pf-item set-bg large-width wedding" data-setbg="images/services/website-development/custom-cms-web-development.webp" style="background-image: url(&quot;images/services/website-development/custom-cms-web-development.webp&quot;); position: absolute; left: 0%; top: 380px;">
+                            <a href="images/services/website-development/custom-cms-web-development.webp" class="pf-icon image-popup"><span class="icon_plus"></span></a>
                             <div class="pf-text">
                                 <h4>Custom CMS Web Development</h4>
                                 <span>The goal of content management system (CMS) development is to create custom solutions that make it easier to create, save, organize, alter, and publish digital content. The web development company is capable of providing custom CMS solutions that enable timely and cost-effective web content management while also encouraging website lead creation.</span>
